a bunch of stopgap measures to get basic execution environment

--- a/editor.styl
+++ b/editor.styl
@@ -45,6 +45,15 @@ tab-bar-bg       = #dddddd
       &-btn
         display  none
 
+      &-result
+        padding     0px 12px
+        font-weight bold
+        margin      0px 0px
+        background  #66ff99
+
+        &.error
+          background  #ff9966
+
       &:hover .editor-atom-btn
         display  block
         cursor   pointer
